--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <input type="text" name="ingredient-2" placeholder="Format: 'Quantity, Unit, Description'">
 
                 <label>Ingredient 3</label>
-                <input value=" type=" text" name="ingredient-3" placeholder="Format: 'Quantity, Unit, Description'">
+                <input type="text" name="ingredient-3" placeholder="Format: 'Quantity, Unit, Description'">
 
                 <label>Ingredient 4</label>
                 <input type="text" name="ingredient-4" placeholder="Format: 'Quantity, Unit, Description'">
