--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                 <input required name="publisher" type="text">
 
                 <label>Prep time</label>
-                <input required name="cookingTime" type="number">
+                <input required name="cookingTime" type="number" min="1" max="1440">
 
                 <label>Servings</label>
-                <input required name="servings" type="number">
+                <input required name="servings" type="number" min="1" max="100">
             </div>
 
             <div class="upload__column">
