--- a/index.html
+++ b/index.html
@@ -80,10 +80,8 @@
             <div class="pagination">
             </div>
 
-            <p class="copyright">
-                &copy; Copyright by
-                <a class="twitter-link" target="_blank" href="https://twitter.com/jonasschmedtman">Jonas
-                    Schmedtmann</a>.
+            <p class="info">
+                This website was created as part of a study course from Udemy.com.
             </p>
         </div>
 
