--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
             </div>
 
             <p class="info">
-                This website was created as part of a study course from Udemy.com.
+                This website was created as part of a study course<br>
+                from Udemy.com.
             </p>
         </div>
 
