chore: format readme

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <p class="info">
                 This website was created as part of a study course<br>
-                from Udemy.com.
+                from Udemy.com
             </p>
         </div>
 
